@@ -197,7 +197,8 @@ Config::Config(int argc, const char **argv)
 		("dbsize", 0, "effective database size (in letters)", db_size)
 		("no-auto-append", 0, "disable auto appending of DAA and DMND file extensions", no_auto_append)
 		("xml-blord-format", 0, "Use gnl|BL_ORD_ID| style format in XML output", xml_blord_format)
-		("stop-match-score", 0, "Set the match score of stop codons against each other.", stop_match_score, 1);
+		("stop-match-score", 0, "Set the match score of stop codons against each other.", stop_match_score, 1)
+		("tantan-minMaskProb", 0, "minimum repeat probability for masking (0.9)", tantan_minMaskProb, 0.9);
 
 	Options_group view_options("View options");
 	view_options.add()
@@ -274,8 +275,6 @@ Config::Config(int argc, const char **argv)
 		("query-parallel-limit", 0, "", query_parallel_limit, 1000000u)
 		("hard-masked", 0, "", hardmasked)
 		("cbs-window", 0, "", cbs_window, 40)
-		("tantan-r", 0, "", tantan_r, 0.005)
-		("tantan-s", 0, "", tantan_s, 0.5)
 		("no-unlink", 0, "", no_unlink)
 		("no-dict", 0, "", no_dict);
 		
