@@ -2,6 +2,8 @@
 - Fixed a bug that could cause undefined behaviour when using a database file of format version < 2.
 - Fixed a compiler error when compiled as generic C++.
 - Program will no longer terminate with an error if unlink system call fails.
+- Added option `--tantan-minMaskProb` to set minimum repeat probability for tantan masking.
+- Changed default value for tantan minimum repeat probability from 0.5 to 0.9.
 
 [0.9.25]
 - Added support for the `sscinames` output field to print subject scientific names to the tabular output format.
